--- a/lesson9/css/small.css
+++ b/lesson9/css/small.css
@@ -505,7 +505,7 @@ span#ratingvalue {
 
 h2#banner-title {
     position: absolute;
-    top: 15vw;
+    top: 5vw;
     left: 5vw;
     color: white;
 
